--- a/tutorial.html
+++ b/tutorial.html
@@ -6,6 +6,7 @@
   <title>Tutorial &mdash; ICARUS  documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css" />
+      <link rel="stylesheet" type="text/css" href="_static/css/hacks.css" />
 
   
   <!--[if lt IE 9]>
